Cleaned up results and changed toList()